--- a/latex/wip/references.bib
+++ b/latex/wip/references.bib
@@ -1,136 +1,314 @@
-@article{cohenEffectsEffectsConstructivism2019,
-  title = {The {{Effects}} of {{Effects}} on {{Constructivism}}},
-  author = {Cohen, Liron and Abreu Faro, Sofia and Tate, Ross},
-  date = {2019-11},
-  journaltitle = {Electronic Notes in Theoretical Computer Science},
-  shortjournal = {Electronic Notes in Theoretical Computer Science},
-  volume = {347},
-  pages = {87--120},
-  issn = {15710661},
-  doi = {10.1016/j.entcs.2019.09.006},
+@inproceedings{bickfordComputabilityChurchTuringChoice2018,
+  title = {Computability {{Beyond Church-Turing}} via {{Choice Sequences}}},
+  booktitle = {Proceedings of the 33rd {{Annual ACM}}/{{IEEE Symposium}} on {{Logic}} in {{Computer Science}}},
+  author = {Bickford, Mark and Cohen, Liron and Constable, Robert L. and Rahli, Vincent},
+  date = {2018-07-09},
+  series = {{{LICS}} '18},
+  pages = {245--254},
+  publisher = {Association for Computing Machinery},
+  location = {New York, NY, USA},
+  doi = {10.1145/3209108.3209200},
+  isbn = {978-1-4503-5583-4}
+}
+
+@inproceedings{bickfordOpenBarBrouwerian2021,
+  title = {Open {{Bar}} - a {{Brouwerian Intuitionistic Logic}} with a {{Pinch}} of {{Excluded Middle}}},
+  booktitle = {29th {{EACSL Annual Conference}} on {{Computer Science Logic}} ({{CSL}} 2021)},
+  author = {Bickford, Mark and Cohen, Liron and Constable, Robert L. and Rahli, Vincent},
+  date = {2021},
+  series = {Leibniz {{International Proceedings}} in {{Informatics}} ({{LIPIcs}})},
+  volume = {183},
+  pages = {11:1--11:23},
+  publisher = {Schloss Dagstuhl – Leibniz-Zentrum für Informatik},
+  location = {Dagstuhl, Germany},
+  doi = {10.4230/LIPIcs.CSL.2021.11},
+  isbn = {978-3-95977-175-7}
+}
+
+@inproceedings{cohenConstructingUnprejudicedExtensional2022,
+  title = {Constructing {{Unprejudiced Extensional Type Theories}} with {{Choices}} via {{Modalities}}},
+  booktitle = {7th {{International Conference}} on {{Formal Structures}} for {{Computation}} and {{Deduction}} ({{FSCD}} 2022)},
+  author = {Cohen, Liron and Rahli, Vincent},
+  date = {2022},
+  series = {Leibniz {{International Proceedings}} in {{Informatics}} ({{LIPIcs}})},
+  volume = {228},
+  pages = {10:1--10:23},
+  publisher = {Schloss Dagstuhl – Leibniz-Zentrum für Informatik},
+  location = {Dagstuhl, Germany},
+  issn = {1868-8969},
+  doi = {10.4230/LIPIcs.FSCD.2022.10},
+  isbn = {978-3-95977-233-4}
+}
+
+@inproceedings{cohenInductiveContinuityBrouwer2023,
+  title = {Inductive {{Continuity}} via {{Brouwer Trees}}},
+  booktitle = {48th {{International Symposium}} on {{Mathematical Foundations}} of {{Computer Science}} ({{MFCS}} 2023)},
+  author = {Cohen, Liron and da Rocha Paiva, Bruno and Rahli, Vincent and Tosun, Ayberk},
+  options = {useprefix=true},
+  date = {2023},
+  series = {Leibniz {{International Proceedings}} in {{Informatics}} ({{LIPIcs}})},
+  volume = {272},
+  pages = {37:1--37:16},
+  publisher = {Schloss Dagstuhl – Leibniz-Zentrum für Informatik},
+  location = {Dagstuhl, Germany},
+  issn = {1868-8969},
+  doi = {10.4230/LIPIcs.MFCS.2023.37},
+  isbn = {978-3-95977-292-1}
+}
+
+@article{cohenPartialMonadicCombinatory2025,
+  title = {From {{Partial}} to {{Monadic}}: {{Combinatory Algebra}} with {{Effects}}},
+  shorttitle = {From {{Partial}} to {{Monadic}}},
+  author = {Cohen, Liron and Grunfeld, Ariel and Kirst, Dominik and Miquey, Étienne},
+  date = {2025},
+  journaltitle = {LIPIcs, Volume 337, FSCD 2025},
+  volume = {337},
+  pages = {14:1-14:22},
+  publisher = {Schloss Dagstuhl – Leibniz-Zentrum für Informatik},
+  issn = {1868-8969},
+  doi = {10.4230/LIPICS.FSCD.2025.14},
+  isbn = {9783959773744},
   langid = {english}
 }
 
-@inproceedings{cohenEvidencedFramesUnifying2021,
-  title = {Evidenced {{Frames}}: {{A Unifying Framework Broadening Realizability Models}}},
-  shorttitle = {Evidenced {{Frames}}},
-  booktitle = {2021 36th {{Annual ACM}}/{{IEEE Symposium}} on {{Logic}} in {{Computer Science}} ({{LICS}})},
-  author = {Cohen, Liron and Miquey, Étienne and Tate, Ross},
-  date = {2021-06},
-  pages = {1--13},
-  doi = {10.1109/LICS52264.2021.9470514}
+@inproceedings{cohenRealizingContinuityUsing2023,
+  title = {Realizing Continuity Using Stateful Computations},
+  booktitle = {31st {{EACSL}} Annual Conference on Computer Science Logic ({{CSL}} 2023)},
+  author = {Cohen, Liron and Rahli, Vincent},
+  date = {2023},
+  series = {Leibniz International Proceedings in Informatics ({{LIPIcs}})},
+  volume = {252},
+  pages = {15:1--15:18},
+  publisher = {Schloss Dagstuhl – Leibniz-Zentrum für Informatik},
+  location = {Dagstuhl, Germany},
+  issn = {1868-8969},
+  doi = {10.4230/LIPIcs.CSL.2023.15},
+  isbn = {978-3-95977-264-8},
+  urn = {urn:nbn:de:0030-drops-174761}
 }
 
 @inproceedings{cohenSeparatingMarkovsPrinciples2024,
-  TITLE = {{Separating Markov's Principles}},
-  AUTHOR = {Cohen, Liron and Forster, Yannick and Kirst, Dominik and da Rocha Paiva, Bruno and Rahli, Vincent},
-  URL = {https://inria.hal.science/hal-04584831},
-  BOOKTITLE = {{39th Annual ACM/IEEE Symposium on Logic in Computer Science (LICS '24)}},
-  ADDRESS = {Talinn, Estonia},
-  YEAR = {2024},
-  MONTH = Jul,
-  DOI = {10.1145/3661814.3662104},
-  PDF = {https://inria.hal.science/hal-04584831v1/file/cohen-forster-kirst-paiva-rahli-separating-markovs-principles-lics24.pdf},
-  HAL_ID = {hal-04584831},
-  HAL_VERSION = {v1},
-}
-
-@article{kleeneInterpretationIntuitionisticNumber1945,
-  title = {On the Interpretation of Intuitionistic Number Theory},
-  author = {Kleene, S. C.},
-  year = {1945},
-  month = dec,
-  journal = {Journal of Symbolic Logic},
-  volume = {10},
-  number = {4},
-  pages = {109--124},
-  issn = {0022-4812, 1943-5886},
-  doi = {10.2307/2269016},
-  urldate = {2024-10-21},
-  copyright = {https://www.cambridge.org/core/terms},
+  title = {Separating {{Markov}}'s {{Principles}}},
+  booktitle = {Proceedings of the 39th {{Annual ACM}}/{{IEEE Symposium}} on {{Logic}} in {{Computer Science}}},
+  author = {Cohen, Liron and Forster, Yannick and Kirst, Dominik and Da Rocha Paiva, Bruno and Rahli, Vincent},
+  date = {2024-07-08},
+  pages = {1--14},
+  publisher = {Association for Computing Machinery},
+  location = {Tallinn Estonia},
+  doi = {10.1145/3661814.3662104},
+  isbn = {9798400706608},
   langid = {english}
 }
 
-@article{kreiselWeakCompletenessIntuitionistic1962,
-  title = {On Weak Completeness of Intuitionistic Predicate Logic},
-  author = {Kreisel, G.},
-  year = {1962},
-  month = jun,
-  journal = {Journal of Symbolic Logic},
-  volume = {27},
+@incollection{coquandComputationalInterpretationForcing2012,
+  title = {A {{Computational Interpretation}} of {{Forcing}} in {{Type Theory}}},
+  booktitle = {Epistemology versus {{Ontology}}},
+  author = {Coquand, Thierry and Jaber, Guilhem},
+  date = {2012},
+  pages = {203--213},
+  publisher = {Springer Netherlands},
+  location = {Dordrecht},
+  doi = {10.1007/978-94-007-4435-6_10},
+  isbn = {978-94-007-4435-6},
+  langid = {english}
+}
+
+@article{coquandIndependenceMarkovsPrinciple2016,
+  title = {The {{Independence}} of {{Markov}}’s {{Principle}} in {{Type Theory}}},
+  author = {Coquand, Thierry and Mannaa, Bassel},
+  date = {2016},
+  journaltitle = {LIPIcs, Volume 52, FSCD 2016},
+  volume = {52},
+  pages = {17:1-17:18},
+  publisher = {Schloss Dagstuhl – Leibniz-Zentrum für Informatik},
+  issn = {1868-8969},
+  doi = {10.4230/LIPICS.FSCD.2016.17},
+  isbn = {9783959770101},
+  langid = {english}
+}
+
+@article{faberEffectiveOperationsType2016,
+  title = {Effective Operations of Type 2 in {{PCAs}}},
+  author = {Faber, Eric and Van Oosten, Jaap},
+  date = {2016-05-17},
+  journaltitle = {Computability},
+  shortjournal = {COM},
+  volume = {5},
   number = {2},
-  pages = {139--158},
-  issn = {0022-4812, 1943-5886},
-  doi = {10.2307/2964110},
-  urldate = {2023-06-06},
+  pages = {127--146},
+  issn = {22113576, 22113568},
+  doi = {10.3233/COM-150048}
+}
+
+@inproceedings{forsterMarkovsPrinciplesConstructive,
+  title = {Markov’s {{Principles}} in {{Constructive Type Theory}}},
+  author = {Forster, Yannick and Kirst, Dominik and da Rocha Paiva, Bruno and Rahli, Vincent},
+  options = {useprefix=true},
+  location = {Valencia, Spain}
+}
+
+@book{johnstoneSketchesElephantTopos2002,
+  title = {Sketches of an {{Elephant A Topos Theory Compendium}}},
+  author = {Johnstone, Peter T},
+  date = {2002-09-12},
+  publisher = {Oxford University Press},
+  location = {Oxford},
+  doi = {10.1093/oso/9780198515982.001.0001},
+  isbn = {978-0-19-851598-2 978-1-383-02287-2},
   langid = {english}
 }
 
-@misc{KleeneStephenCole1965Tfoi,
-series = {Studies in logic and the foundations of mathematics},
-publisher = {North-Holland},
-year = {1965},
-title = {The foundations of intuitionistic mathematics : especially in relation to recursive functions / Stephen Cole Kleene, Richard Eugene Vesley.},
-language = {eng},
-address = {Amsterdam},
-author = {Kleene, Stephen Cole},
-keywords = {Intuitionistic mathematics; Logic Symbolic and mathematical; Recursive functions},
+@book{kleeneFoundationsIntuitionisticMathematics1965,
+  title = {The Foundations of Intuitionistic Mathematics: Especially in Relation to Recursive Functions},
+  shorttitle = {The Foundations of Intuitionistic Mathematics},
+  author = {Kleene, Stephen Cole and Vesley, Richard Eugene},
+  date = {1965},
+  series = {Studies in Logic and the Foundations of Mathematics},
+  publisher = {North-Holland},
+  location = {Amsterdam},
+  langid = {english},
+  pagetotal = {viii+206}
+}
+
+@article{kreiselFormalSystemsBranches1970,
+  title = {Formal Systems for Some Branches of Intuitionistic Analysis},
+  author = {Kreisel, G. and Troelstra, A.S.},
+  date = {1970},
+  journaltitle = {Annals of Mathematical Logic},
+  shortjournal = {Annals of Mathematical Logic},
+  volume = {1},
+  number = {3},
+  pages = {229--387},
+  issn = {00034843},
+  doi = {10.1016/0003-4843(70)90001-X},
+  langid = {english}
+}
+
+@book{maclaneSheavesGeometryLogic1992,
+  title = {Sheaves in Geometry and Logic: A First Introduction to Topos Theory},
+  shorttitle = {Sheaves in Geometry and Logic},
+  author = {Mac Lane, Saunders and Moerdijk, Ieke},
+  date = {1992},
+  series = {Universitext},
+  publisher = {Springer-Verlag},
+  location = {New York},
+  isbn = {978-0-387-97710-2 978-3-540-97710-0},
+  pagetotal = {627}
+}
+
+@article{moggiNotionsComputationMonads1991,
+  title = {Notions of Computation and Monads},
+  author = {Moggi, Eugenio},
+  date = {1991-07},
+  journaltitle = {Information and Computation},
+  shortjournal = {Information and Computation},
+  volume = {93},
+  number = {1},
+  pages = {55--92},
+  issn = {08905401},
+  doi = {10.1016/0890-5401(91)90052-4},
+  langid = {english}
 }
 
 @book{oostenRealizabilityIntroductionIts2008,
   title = {Realizability: An Introduction to Its Categorical Side},
   shorttitle = {Realizability},
   author = {van Oosten, Jaap},
-  year = {2008},
+  date = {2008},
   series = {Studies in Logic and the Foundations of Mathematics},
   edition = {1st ed},
   number = {152},
   publisher = {Elsevier},
-  address = {Oxford},
+  location = {Oxford},
   isbn = {978-0-444-51584-1},
-  lccn = {QA9.7 .O75 2008},
+  pagetotal = {310},
   annotation = {OCLC: ocn180470932}
 }
 
-@article{krivineTypedLambdacalculusClassical2001,
-  title = {Typed Lambda-Calculus in Classical {{Zermelo-Fr{\ae}nkel}} Set Theory},
-  author = {Krivine, Jean-Louis},
-  year = {2001},
-  month = apr,
-  journal = {Archive for Mathematical Logic},
-  volume = {40},
-  number = {3},
-  pages = {189--205},
-  issn = {0933-5846, 1432-0665},
-  doi = {10.1007/s001530000057},
-  urldate = {2024-11-06},
-  copyright = {http://www.springer.com/tdm}
-}
-@article{krivineDependentChoiceQuote2003,
-  title = {Dependent Choice, `Quote' and the Clock},
-  author = {Krivine, Jean-Louis},
-  year = {2003},
-  month = nov,
-  journal = {Theoretical Computer Science},
-  volume = {308},
-  number = {1-3},
-  pages = {259--276},
-  issn = {03043975},
-  doi = {10.1016/S0304-3975(02)00776-4},
-  urldate = {2024-11-06},
-  copyright = {https://www.elsevier.com/tdm/userlicense/1.0/},
+@article{rahliValidatingBrouwersContinuity2018,
+  title = {Validating {{Brouwer}}'s Continuity Principle for Numbers Using Named Exceptions},
+  author = {Rahli, Vincent and Bickford, Mark},
+  date = {2018-06},
+  journaltitle = {Mathematical Structures in Computer Science},
+  volume = {28},
+  number = {6},
+  pages = {942--990},
+  issn = {0960-1295, 1469-8072},
+  doi = {10.1017/S0960129517000172},
   langid = {english}
 }
-@article{krivine:hal-00154500,
-  TITLE = {{Realizability in classical logic}},
-  AUTHOR = {Krivine, Jean-Louis},
-  URL = {https://hal.science/hal-00154500},
-  JOURNAL = {{Panoramas et synth{\`e}ses}},
-  VOLUME = {27},
-  PAGES = {197-229},
-  YEAR = {2009},
-  KEYWORDS = {lambda-calculus ; proof-program correspondence},
-  PDF = {https://hal.science/hal-00154500v1/file/Luminy04.pdf},
-  HAL_ID = {hal-00154500},
-  HAL_VERSION = {v1},
+
+@inproceedings{sterlingGuardedComputationalType2018,
+  title = {Guarded {{Computational Type Theory}}},
+  booktitle = {Proceedings of the 33rd {{Annual ACM}}/{{IEEE Symposium}} on {{Logic}} in {{Computer Science}}},
+  author = {Sterling, Jonathan and Harper, Robert},
+  date = {2018-07-09},
+  pages = {879--888},
+  publisher = {ACM},
+  location = {Oxford United Kingdom},
+  doi = {10.1145/3209108.3209153},
+  isbn = {978-1-4503-5583-4},
+  langid = {english}
+}
+
+@article{sterlingHigherOrderFunctions2021,
+  title = {Higher Order Functions and {{Brouwer}}’s Thesis},
+  author = {Sterling, Jonathan},
+  date = {2021},
+  journaltitle = {Journal of Functional Programming},
+  shortjournal = {J. Funct. Prog.},
+  volume = {31},
+  pages = {30},
+  issn = {0956-7968, 1469-7653},
+  doi = {10.1017/S0956796821000095},
+  langid = {english}
+}
+
+@book{vanattenBrouwer2004,
+  title = {On {{Brouwer}}},
+  author = {van Atten, Mark},
+  options = {useprefix=true},
+  date = {2004},
+  publisher = {Wadsworth Publishing Company}
+}
+
+@article{vandenbergAspectsPredicativeAlgebraic2011,
+  title = {Aspects of Predicative Algebraic Set Theory, {{II}}: {{Realizability}}},
+  shorttitle = {Aspects of Predicative Algebraic Set Theory, {{II}}},
+  author = {Van Den Berg, Benno and Moerdijk, Ieke},
+  date = {2011-04},
+  journaltitle = {Theoretical Computer Science},
+  shortjournal = {Theoretical Computer Science},
+  volume = {412},
+  number = {20},
+  pages = {1916--1940},
+  issn = {03043975},
+  doi = {10.1016/j.tcs.2010.12.019},
+  langid = {english}
+}
+
+@thesis{vanoostenExercisesRealizability2018,
+  type = {doctoral},
+  title = {Exercises in {{Realizability}}},
+  author = {van Oosten, Jaap},
+  options = {useprefix=true},
+  date = {2018-08-02},
+  institution = {University of Amsterdam},
+  url = {https://eprints.illc.uva.nl/id/eprint/1858/},
+  urldate = {2025-06-09},
+  langid = {english}
+}
+
+@article{vanoostenSemanticalProofJonghs1991,
+  title = {A Semantical Proof of {{De Jongh}}'s Theorem},
+  author = {van Oosten, Jaap},
+  options = {useprefix=true},
+  date = {1991-03-01},
+  journaltitle = {Archive for Mathematical Logic},
+  shortjournal = {Archive for Mathematical Logic},
+  volume = {31},
+  number = {2},
+  pages = {105--114},
+  issn = {1432-0665},
+  doi = {10.1007/BF01387763}
 }
