--- a/latex/types2025/references.bib
+++ b/latex/types2025/references.bib
@@ -147,7 +147,8 @@
   author = {Johnstone, Peter T},
   year = {2002},
   month = sep,
-  publisher = {Oxford University PressOxford},
+  publisher = {Oxford University Press},
+  address = {Oxford},
   doi = {10.1093/oso/9780198515982.001.0001},
   urldate = {2024-11-19},
   isbn = {978-0-19-851598-2 978-1-383-02287-2},
